这个应用只为 手机使用

--- a/app/pages/application/application.html
+++ b/app/pages/application/application.html
@@ -1,9 +1,11 @@
 <ion-view>
+  <div class="title-div">应用中心</div>
   <div class="content-background"></div>
   <div class="coutent-function">
     <div class="function-title">功能</div>
     <div class="daily-work button" ng-click="goDailywork()" >
-      <img src="build/img/work.png"><span>报工</span>
+      <img src="build/img/work.png">
+      <div class="report-span">报工</div>
     </div>
   </div>
 </ion-view>
