--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -17,17 +17,17 @@
         </div>
         <div class="preservation">
           <div style="float: left">
-            <div style="float: left;margin-top: 3px">
-            <input type="checkbox" style="width: 20px;height: 20px;margin-right: 10px" ng-model="saveUsername.selected" >
+            <div style="float: left;margin-top: .02rem">
+              <input type="checkbox" class="input-left" ng-model="saveUsername.selected" >
             </div>
-              <span style="float: left">{{saveUsername.lable}}</span>
+            <span style="float: left;margin-left: .15rem" >{{saveUsername.lable}}</span>
           </div>
           <div style="float: right" >
             <div style="float: right">
-            <label class="toggle toggle-positive" style="margin-right: 20px;margin-left: 15px">
+            <label class="toggle toggle-positive" style="margin-right: .2rem;margin-left: .15rem">
               <input type="checkbox" ng-checked="checkbox_savePwd" ng-click="savePassword()">
-              <div class="track" style="height: 24px;width: 44px;margin-top: 5px;border: none;">
-                <div class="handle" style="height: 22px;width: 22px;top: 11px;border: none;"></div>
+              <div class="track">
+                <div class="handle" style="height: .18rem;width: .18rem;top: 7px;border: none;"></div>
               </div>
             </label>
             </div>
