--- a/www/index.html
+++ b/www/index.html
@@ -35,5 +35,17 @@
   have templates inline in this html file if you'd like).
 -->
 <ion-nav-view></ion-nav-view>
+
+  <script>
+    // let scale = 1 / devicePixelRatio;
+    // document.querySelector('meta[name="viewport"]').setAttribute('content','initial-scale=' + scale + ', maximum-scale=' + scale + ', minimum-scale=' + scale + ', user-scalable=no');
+    // document.documentElement.style.fontSize = document.documentElement.clientWidth / 10 + 'px';
+
+    // alert(document.documentElement.clientWidth);
+    // alert(devicePixelRatio);
+
+    document.documentElement.style.fontSize = document.documentElement.clientWidth / 3.75 + 'px';
+
+  </script>
 </body>
 </html>
