--- a/app/pages/report/report.html
+++ b/app/pages/report/report.html
@@ -17,9 +17,11 @@
 			<li ng-class='{active:activeTab=="cargo"}' ng-click='activeTab="cargo"'><span style="display: inline-block;width: 100%;" ng-click="cargoLoading()">报工(货量)</span>
 				<div class="border-bottom" ng-show='activeTab=="cargo"'></div>
 			</li>
+
 			<li ng-class='{active:activeTab=="other" }' ng-click='activeTab="other"'><span style="display: inline-block;width: 100%;" ng-click="otherLoading()">报工(其他)</span>
 				<div class="border-bottom" ng-show='activeTab=="other"'></div>
 			</li>
+
 			<li ng-class='{active:activeTab=="rework"}' ng-click='activeTab="rework"'><span ng-click="reWork()" style="display: inline-block;width: 100%;">返工</span>
 				<div class="border-bottom" ng-show='activeTab=="rework"'></div>
 			</li>
@@ -251,6 +253,8 @@
 			</ion-content>
 		</div>
 	</div>
+
+
 	<!--搜索页面-->
 	<div class="search-content" ng-show="opensearch">
 		<ion-header-bar style="background: rgba(250,250,250,0.90);box-shadow: 0 0 0 0 #E3E3E3;">
@@ -258,31 +262,35 @@
 			<h1 class="title">搜索</h1>
 		</ion-header-bar>
 		<div class="search-inp">
-			<lable class="start-time time">
+			<lable class="time">
 				<span class="input-title">开始时间</span>
-				<ionic-datepicker idate="currentDate">
-					<i class="icon ion-date fl date"></i>
-				</ionic-datepicker>
-				<input type="text" placeholder="请输入开始时间" class="fl inp startDate" ng-model="searchCondition.startDate">
+				<div class="time-div">
+					<input type="text" placeholder="请输入开始时间" ng-model="searchCondition.startDate">
+					<ionic-datepicker idate="currentDate">
+						<i class="icon date-i date-icon"></i>
+					</ionic-datepicker>
+				</div>
 			</lable>
-			<lable class="end-time time">
+			<lable class="time">
 				<span class="input-title">结束时间</span>
-				<ionic-datepicker idate="endTimeDate">
-					<i class="icon ion-date fl date"></i>
-				</ionic-datepicker>
-				<input type="text" placeholder="请输入结束时间" class="fl inp endDate" ng-model="searchCondition.endDate">
+				<div class="time-div">
+					<input type="text" placeholder="请输入结束时间" ng-model="searchCondition.endDate">
+					<ionic-datepicker idate="endTimeDate">
+						<i class="icon date-i date-icon"></i>
+					</ionic-datepicker>
+				</div>
 			</lable>
-			<lable class="time order">
+			<lable class="time">
 				<span class="input-title">工单号</span>
-				<input type="text" placeholder="请填写工单号" class="fl inp" ng-model="searchCondition.orderNum">
+				<input type="text" placeholder="请填写工单号" class="time-input" ng-model="searchCondition.orderNum">
 			</lable>
-			<lable class="time order">
+			<lable class="time">
 				<span class="input-title">项目名称</span>
-				<input type="text" placeholder="请填写项目名称" class="fl inp" ng-model="searchCondition.projectName">
+				<input type="text" placeholder="请填写项目名称" class="time-input" ng-model="searchCondition.projectName">
 			</lable>
-			<lable class="time order">
+			<lable class="time">
 				<span class="input-title">产品编码</span>
-				<input type="text" placeholder="请填写产品编码" class="fl inp" ng-model="searchCondition.orderCode">
+				<input type="text" placeholder="请填写产品编码" class="time-input" ng-model="searchCondition.orderCode">
 			</lable>
 		</div>
 		<div class="btn-search" ng-click="searchBtn()">
